[project]
name = "hud-quickstart"
version = "0.1.0"
description = "A simple quickstart to run evaluations on hud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hud-python[agent]",
    "ipykernel>=6.29.5",
]


[tool.hud.clone]
style="bright_white"
message="""[bright_white]
          ████                                                               ████                   
    ██████████                                                        ███████████                   
    ██████████                                                        ███████████                   
      ███████                                                            ███████                   
      ███████                                                            ███████                   
      ███████                                                            ███████                   
      ███████      █████                                       ██████    ███████                   
      ███████   ███████████ ██████████     ███████████     █████████████████████                   
      ██████████████████████   ███████        ████████    ████████     █████████                   
      █████████      ███████   ███████        ████████   ████████        ███████                   
      ███████        ████████  ███████        ████████  ████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████  ████████         ███████                   
      ███████        ████████  ███████        ████████  ████████         ███████                   
      ███████        ████████  ████████    ███████████   ████████      ██████████                  
    ███████████     ███████████ ████████████  ███████████ ██████████████ ███████████               
    ████████████    ████████████   ████████    ████████      █████████    ████████                  
                                                                                                    
[/bright_white]

[bold]Welcome to hud[/bold] :wave:

We help AI engineers and ML researchers [bold]evaluate models[/bold] and [bold]run agents in controlled environments[/bold].

[bold cyan]Quickstart includes[/bold cyan]:
  1. Pull a sample evaluation set
  2. Initialize a remote eval environment on our hosted infra
  3. Run an agent through a task
  4. Evaluate results
  5. Shut down the remote environment
  6. Inspect trajectory & telemetry in our [bold]trace viewer[/bold] (steps, tool calls, scores, logs)

[bold cyan]Repo contents[/bold cyan]:
  • [bold]pyproject.toml[/bold] — dependencies for the hud-python SDK
  • [bold]quickstart.py[/bold] — minimal walkthrough of the full agent loop
  • [bold].env.example[/bold] — template for required environment variables
  • [bold]README.md[/bold] — in-depth docs on environment definition and the loop

[bold cyan]Next steps[/bold cyan]:
  • Sign up: [link=https://app.hud.so]hud platform[/link]
  • Create an API key: [link=https://app.hud.so/project/api-keys]project API keys[/link]
  • Add [bold]HUD[/bold], [bold]OpenAI[/bold], and [bold]Claude[/bold] keys to your [bold].env[/bold]
  • Run: [bold yellow]cd quickstart && uv run quickstart.py[/bold yellow]
  """