[project]
name = "hud-quickstart"
version = "0.1.0"
description = "A simple quickstart to run evaluations on hud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hud-python[agent]==0.4.26",
    "ipykernel>=6.29.5",
]


[tool.hud.clone]
style="bright_white"
message="""[bright_white]
          ████                                                               ████                   
    ██████████                                                        ███████████                   
    ██████████                                                        ███████████                   
      ███████                                                            ███████                   
      ███████                                                            ███████                   
      ███████                                                            ███████                   
      ███████      █████                                       ██████    ███████                   
      ███████   ███████████ ██████████     ███████████     █████████████████████                   
      ██████████████████████   ███████        ████████    ████████     █████████                   
      █████████      ███████   ███████        ████████   ████████        ███████                   
      ███████        ████████  ███████        ████████  ████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████ █████████         ███████                   
      ███████        ████████  ███████        ████████  ████████         ███████                   
      ███████        ████████  ███████        ████████  ████████         ███████                   
      ███████        ████████  ████████    ███████████   ████████      ██████████                  
    ███████████     ███████████ ████████████  ███████████ ██████████████ ███████████               
    ████████████    ████████████   ████████    ████████      █████████    ████████                  
                                                                                                    
[/bright_white]

[bold]Welcome to hud[/bold] :wave:

We help AI engineers and ML researchers [bold]evaluate models[/bold] and [bold]run agents in controlled environments[/bold].

[bold cyan]Repo contents[/bold cyan]:
  • [bold]pyproject.toml[/bold] — dependencies for the hud-python SDK
  • [bold]quickstart.py[/bold] — minimal walkthrough of the full agent loop
  • [bold].env.example[/bold] — template for required environment variables
  • [bold]README.md[/bold] — in-depth docs on environment definition and the loop

[bold cyan]Next steps[/bold cyan]:
  1. Sign up: [bold blue underline][link=https://app.hud.so]hud platform[/link][/bold blue underline] at [bold blue underline][link=https://app.hud.so]https://app.hud.so[/link][/bold blue underline]
  2. Create an API key: [bold blue underline][link=https://app.hud.so/project/api-keys]project API keys[/link][/bold blue underline]
  3. Add [bold]HUD[/bold], [bold]OpenAI[/bold], and [bold]Claude[/bold] API keys to your [bold].env[/bold] file.
  4. Run: [bold yellow]cd quickstart && uv run quickstart.py[/bold yellow]
  """